[UPT] Fix responsivity on small screens. Small updates to front-end.

--- a/process_scheduler/src/components/App.css
+++ b/process_scheduler/src/components/App.css
@@ -17,10 +17,11 @@
 }
 
 .main__window {
-  width: 80%;
+  width: 90%;
   height: 90%;
 
-  margin: 5% 10% 5% 10%;
+  margin: auto;
+  margin-top: 5%;
 
   outline-style: solid;
   outline-color: #291e67;
@@ -102,8 +103,8 @@
   z-index: 9;
   position: absolute;
   bottom: 0;
-  margin-bottom: 6.3%;
+  margin-bottom: 6.5%;
   right: 0;
-  margin-right: 11.5%;
+  margin-right: 7%;
   opacity: 40%;
 }
